Negative integers in @font-palette-values are invalid https://bugs.webkit.org/show_bug.cgi?id=230788 <rdar://problem/83528806>

Reviewed by Simon Fraser.

LayoutTests/imported/w3c:

This is being upstreamed at https://github.com/web-platform-tests/wpt/pull/30961.

* web-platform-tests/css/css-fonts/parsing/font-palette-values-invalid-expected.txt:
* web-platform-tests/css/css-fonts/parsing/font-palette-values-invalid.html:
* web-platform-tests/css/css-fonts/parsing/font-palette-values-valid-expected.txt:
* web-platform-tests/css/css-fonts/parsing/font-palette-values-valid.html:

Source/WebCore:

The spec made it illegal in
https://github.com/w3c/csswg-drafts/commit/09b3c45238feb6c0e8526e010cd3780f4fc4900b.

Test: web-platform-tests/css/css-fonts/parsing/font-palette-values-invalid.html

* css/CSSFontPaletteValuesRule.cpp:
(WebCore::CSSFontPaletteValuesRule::basePalette const):
(WebCore::CSSFontPaletteValuesRule::initializeMapLike):
(WebCore::CSSFontPaletteValuesRule::cssText const):
* css/parser/CSSParserImpl.cpp:
(WebCore::CSSParserImpl::consumeFontPaletteValuesRule):
* css/parser/CSSPropertyParser.cpp:
(WebCore::consumeBasePaletteDescriptor):
(WebCore::consumeOverrideColorDescriptor):
* platform/graphics/FontPaletteValues.h:
* platform/graphics/cocoa/FontCacheCoreText.cpp:
(WebCore::addAttributesForFontPalettes):

Canonical link: https://commits.webkit.org/242236@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283188 268f45cc-cd09-0410-ab3c-d52691b4dbfc